# axum-demo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml
entity/: Cargo.toml
entity/src/: account.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250731_031602_account.rs
src/: main.rs
src/apps/: mod.rs
src/apps/account/: mod.rs  schemas.rs  views.rs
src/apps/common/: mod.rs  views.rs
src/project/: db.rs  err.rs  mod.rs  response.rs  state.rs
