[package]
name = "axum-demo"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]
members = [
    ".",
    "migration",
    "entity",
]

[workspace.dependencies]
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
    "with-chrono",
    "with-json",
] }
serde = { version = "1.0.219", features = ["derive"] }


[dependencies]
migration = { path = "./migration" }
entity = { path = "./entity" }

sea-orm = { workspace = true }
serde = { workspace = true }

anyhow = "1.0.98"
axum = "0.8.4"
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
chrono = "0.4.41"
